kgateway/multicluster/manifests/nginx-west.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-service
  template:
    metadata:
      labels:
        app: nginx-service
    spec:
      serviceAccountName: nginx-service
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  annotations:
    networking.istio.io/traffic-distribution: Any
  labels:
    app: nginx-service
    solo.io/service-scope: global
    istio.io/ingress-use-waypoint: "true"
spec:
  selector:
    app: nginx-service
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
